--- a/static/styles.css
+++ b/static/styles.css
@@ -24,12 +24,13 @@ h1 {
 
 h3 {
   font-size: max(2.6vh, 1.43em);
-  margin: 14px 0 10px 0;
+  margin: 15px 0 6px 0;
 }
 
 p {
   font-size: max(2.4vh, 1.32em);
-  margin: 10px 0 12px 0;
+  margin: 5px 0 12px 0;
+  text-align: justify;
 }
 
 nav {
